# grafana-hs-mcp

./: README.md  install.sh  pyproject.toml
examples/: opencode.json.example
src/grafana_hs_mcp/: __init__.py  auth.py  cli.py  config.py  grafana_client.py  server.py
