[project]
name = "grafana-hs-mcp"
version = "0.1.14"
description = "MCP server for querying Grafana through Playwright-backed SSO auth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "playwright>=1.40.0",
  "requests>=2.31.0",
]

[project.scripts]
grafana-hs-mcp = "grafana_hs_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
