[project]
name = "grafana-hs-mcp"
version = "0.1.22"
description = "MCP server for querying Grafana through Playwright-backed SSO auth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "browser-cookie3==0.20.1",
  "mcp==1.27.2",
  "playwright==1.60.0",
  "requests==2.34.2",
]

[project.scripts]
grafana-hs-mcp = "grafana_hs_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
